fix: switch screen shortcut (#217)
* fix: log output

* fix: switch screen shortcut

* Add FUNDING.yml [skip ci]

--- a/src_assets/common/assets/web/config.html
+++ b/src_assets/common/assets/web/config.html
@@ -331,9 +331,9 @@
         serialize() {
           const nl = this.config === 'windows' ? '\r\n' : '\n'
           this.config.resolutions = JSON.stringify(this.resolutions)
-            .replace(/","/g, `,${nl}    `)
-            .replace(/\["/, `[${nl}    `)
-            .replace(/"\]/, `${nl}]`)
+            .replace(/","/g, `,`)
+            .replace(/\["/, `[`)
+            .replace(/"\]/, `]`)
 
           this.fps = this.fps.filter((item) => +item >= 30 && +item <= 500)
           this.config.fps = JSON.stringify(this.fps).replaceAll('"', '')
